added functionality to print new tweets.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
       $(document).ready(function(){
         var $body = $('body');
         $body.html('');
+        //create and add title
         var $title = $('<header id="title"><h1>TWITTLER</h1></header>')
         $title.appendTo($body);
+        //create and add new tweet button
         var $button = $('<button type="button">Load new tweets</button>')
         $button.appendTo($body);
         var index = streams.home.length - 1;
@@ -73,17 +75,42 @@
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
           $tweet.data('tweetID', index);
+          $tweet.addClass('tweet')
           $tweet.text(tweetTextBuilder(tweet));
           $tweet.appendTo($body);
           index -= 1;
         }
-      });
-
-      //create 'load new tweets' button
+var lastPrinted;
+//create 'load new tweets' button
+$('button').on('click', function(){
+  console.log('checking tweets');
+  //retrieve the id of the most recent tweet printed
+  lastPrinted = lastPrinted || $('div').first('.tweet').data('tweetID');
+  console.log('last tweet ID: ' + lastPrinted);
+  //check the tweet cue
+  if((lastPrinted + 1) < streams.home.length){
+    var i;
+    for(i = lastPrinted + 1; i < streams.home.length; i++){
+      var tweet = streams.home[i];
+          var $tweet = $('<div></div>');
+          $tweet.data('tweetID', i);
+          $tweet.addClass('tweet')
+          $tweet.text(tweetTextBuilder(tweet));
+          $tweet.prependTo($('div').first('.tweet'));
+    }
+    lastPrinted = i;
+    console.log('last tweet ID: ' + lastPrinted);
+    
+  }
+});
         //when pressed
           //check if first tweet on page's id + 1 is less than streams.home.length
           //print 'new' tweets on page above the most recently printed tweets(.prependTo())
 
+
+      });
+
+      
     </script>
   </body>
 </html>
