cleaned up styling of go_home button

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               })
             
             })
-            $homeButton.appendTo($userStream);
+            $homeButton.prependTo($userStream);
 
             $('#stream').slideUp(400, function () {
               $('#get_new').toggle();
