added title image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         var $body = $('body');
         $body.html('');
         //create and add title
-        var $title = $('<header id="title"><h1>TWITTLER</h1></header>');
+        var $title = $('<header id="title"><IMG src=resources/twittler.png></header>');
+        
+
         $title.appendTo($body);
         //create and add new tweet button
         var $button = $('<button type="button" id="get_new">Load new tweets</button>');
